feat: handle disconnect and passing host ownership

--- a/curve_fever_client/style.css
+++ b/curve_fever_client/style.css
@@ -107,7 +107,10 @@ div#players {
 
 p.player_entry {
     margin: auto;
-    padding: 1px 8px;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 2px;
+    padding-bottom: 4px;
     border-bottom: solid 2px #37474F;
 }
 
